# stand_up

./: .gitignore  README.md
.claude/: launch.json
design_handoff_standup/: README.md  Stand UP - Standalone (rendered preview).html  Stand UP 设计稿.dc.html  StandUpWindow.dc.html
scripts/: build_release.sh  fix-gatekeeper.command  gen_icons.swift
src/: index.html  popover.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: app.css
src/js/: bridge.js  dockicon.js  engine.js  main.js  popover.js  rings.js  theme.js  water.js
