[package]
name = "standup"
version = "0.1.0"
description = "Stand UP! — a tiny macOS reminder to stand up, move, and drink water"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSImage",
    "NSDockTile",
] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSGeometry"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
